# Orah-AI-project

./: .env.example  .gitignore  README.md  pyproject.toml
python-cli/: .env.example  .profile_cache.json  cache_service.py  main.py  package-lock.json  requirements.txt
python-cli/ai_service/: __init__.py
python-cli/github_service/: __init__.py
src/: .profile_cache.json  ai_core.py  ai_runner.py
src/common/: logger.py  repos_analyzer.py
src/python_cli/: main.py
src/web-app/: .env.local.example
src/web-app/src/app/: actions.ts
tests/: test_import_repos_analyzer.py
web-app/: package-lock.json  package.json
web-app/src/app/: actions.ts  page.tsx
