[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "giladeldor",email = "giladeldor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.43.0,<3.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)"
]

[tool.poetry]
packages = [
    { include = "python_cli", from = "src" },
    { include = "common", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
